smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/operations/errors-before-input.smithy
$version: "2.0"
namespace smithy.example

operation GetFoo {
    errors: []
    input: GetFooInput
}

@input
structure GetFooInput {}
